Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-27031

Duplicate context menu item in Issues pane

XMLWordPrintable

    • Windows
    • 400ada2daa (qt-creator/qt-creator/7.0) 400ada2daa (qt-creator/qt-creator/master) 400ada2daa (qt-creator/tqtc-qt-creator/7.0) 400ada2daa (qt-creator/tqtc-qt-creator/master) 400ada2daa (qt-creator/tqtc-qt-creator/qds-3.1)

      The Issues pane context-menu contains two instances of the "Show Output" menu item.

      To reproduce, right-click an issue in the Issues pane.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            kandeler Christian Kandeler
            leenam Leena Miettinen
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes